--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Python
         run: |
           python -m pip install -r requirements.txt
-          python -m pygbag --build .
+          python -m pygbag --build $GITHUB_WORKSPACE/main.py
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
